# cmake-object-libraries

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/database/: CMakeLists.txt
core/database/include/core/database/: database.hpp
core/database/src/: database.cpp
core/io/: CMakeLists.txt
core/io/include/core/io/: io.hpp
core/io/src/: io.cpp
core/sample_app/: sample_app.cpp
